- changed default reliability branching parameter DEFAULT_MAXLOOKAHEAD from 8 to 9, that increases the number of further
  variables evaluated without better score
- changed default gomory cut separation parameter DEFAULT_MAXRANK from 0 to 3, to take also gomory cuts, that could not
  be scaled to integral coefficients, with maximal rank 3 into account

core:
- added presolve.{c,h} which should be used for all preprocessing mechanisms executed from within SCIP, corresponding to
  solve.{c,h}, and also for presprocessing methods which can be called from different plugins or from the core to avoid
  code doubling
- the main output routine of message.c (bufferMessage - now handleMessage) has been rewritten: it now does not need
  a copy of the string to be output anymore, which makes the code much simpler (and also faster); it is passed a
  function pointer to the output function and uses it to directly output the (buffered) messages


SCIP version 3.0.1
==================

fixed bugs:
- fixed bug when adding linear constraints with non active variables in solving process, during propagation this
  resulted in changing the row, which is not possible for unmodifiable constraints/locked rows
- fixed bug in copying nonlinear constraints during presolve (nonlinear part was not copied)
- fixed issue with deleting varbound constraints in case the bound change was not applied
- fixed small issue in pseudo objective propagator w.r.t. propagating the lower bound globally
- fixed issue with applying the effective root depth during the search
- fixed bugs in parsing dis-/conjunctive constraints
- fixed minor bug in conjunctive constraint handler printing wrong constraint
- fixed bug in disjunctive constraint handler when enforcing a constraint
- fixed bug with handling of empty logicor and bounddisjunction constraints
- fixed bug which disabled iteration limit in SCIPlpSolveAndEval()
- fixed bug in cumulative constraint handler w.r.t. getting active variables